--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,16 +24,40 @@ body {
   height: 100vh;
 }
 
-.bg {
-  opacity: 100;
+.cover {
+  pointer-events: none;
+  opacity: 0;
+  z-index: 0;
   transition: 600ms;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  background-color: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1000ms ease-in-out;
+}
+
+.cover img {
+  height: 30%;
+  width: 30%;
+}
+
+.bg {
+  pointer-events: none;
+  opacity: 0;
+  transition: 600ms;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   background-color: none;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  transition: 1000ms ease-in-out;
 }
 
 .bg audio {
@@ -43,10 +67,34 @@ body {
 .bg .top {
   top: 0;
   left: 0;
+  animation: moves ease-in-out infinite 7s;
 }
 
 .bg img {
   position: absolute;
+}
+
+@keyframes moves {
+  0% {
+    opacity: 1;
+    transform: translate(0px, 0px);
+  }
+  20% {
+    opacity: 0;
+    transform: translate(40px, 100px);
+  }
+  22% {
+    opacity: 1;
+    transform: translate(130px, 160px);
+  }
+  50% {
+    opacity: 1;
+    transform: translate(30%, 100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0px, 0px);
+  }
 }
 
 .creator {
