--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -22,16 +22,39 @@ body{
     width: 100%;
     height: 100vh;
 }
-.bg{
-    opacity: 100;
+
+.cover{
+    pointer-events: none;
+    opacity: 0;
+    z-index: 0;
     transition: 600ms;
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    background-color: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 1000ms ease-in-out;
+    img{
+        height: 30%;
+        width: 30%;
+    }
+}
+.bg{
+    pointer-events: none;
+    opacity: 0;
+    transition: 600ms;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     background-color: none;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    transition: 1000ms ease-in-out;
     audio{
         opacity: 0;
     }
@@ -41,10 +64,34 @@ body{
         
         top:0;
         left: 0;
+        animation: moves ease-in-out infinite 7s;
+        
     }
    img{
     position: absolute;
    } 
+   @keyframes moves {
+     0%{
+        opacity: 1;
+        transform: translate(0px,0px);
+     }
+     20%{
+        opacity: 0;
+        transform: translate(40px,100px);
+     }
+     22%{
+        opacity: 1;
+        transform: translate(130px,160px);
+     }
+     50%{
+        opacity: 1;
+        transform: translate(30%,100px);
+     }
+     100%{
+        opacity: 1;
+        transform: translate(0px,0px);
+     }
+   }
 }
 .creator{
     position: absolute;
