--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,7 +26,7 @@ body {
 
 .cover {
   pointer-events: none;
-  opacity: 0;
+  opacity: 1;
   z-index: 0;
   transition: 600ms;
   position: absolute;
@@ -350,5 +350,10 @@ body {
   }
   .top {
     margin-top: 50%;
+  }
+  .cover {
+    transform: translateY(-20px);
+    justify-content: center;
+    align-items: flex-start;
   }
 }
