--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -25,7 +25,7 @@ body{
 
 .cover{
     pointer-events: none;
-    opacity: 0;
+    opacity: 1;
     z-index: 0;
     transition: 600ms;
     position: absolute;
@@ -373,5 +373,10 @@ body{
    }
    .top{
     margin-top: (100% - 50%);
+   }
+   .cover{
+    transform: translateY(-20px);
+    justify-content: center;
+    align-items: flex-start;
    }
   }
