--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -372,11 +372,17 @@ body{
     min-width: 90%;
    }
    .top{
-    margin-top: (100% - 50%);
+    top: 0;
+    margin-top: -200px;
+    
    }
    .cover{
     transform: translateY(-20px);
     justify-content: center;
     align-items: flex-start;
+    img{
+        height: 50%;
+        width: 50%;
+    }
    }
   }
